tests/negative/neg_try_send_reassign_without_check.safe
-- Test: neg_try_send_reassign_without_check
-- Description: Pending try_send state is not null-before-move safe.
--   The source cannot be overwritten with a new owner before Success is
--   checked because the transfer may already have occurred.
-- Expected: REJECT move_target_not_null

package Neg_Try_Send_Reassign_Without_Check is

   type Payload is record
      Value : Integer;
   end record;

   type Payload_Ptr is access Payload;

   channel Data_Ch : Payload_Ptr capacity 1;

   procedure Run is
      Source  : Payload_Ptr = new ((Value = 1) as Payload);
      Success : Boolean = False;
   begin
      try_send Data_Ch, Source, Success;
      Source = new ((Value = 2) as Payload);
   end Run;

end Neg_Try_Send_Reassign_Without_Check;
